# AI_Music

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  baseline_cqt.ipynb  docker-compose.yml  mert_retrieval.py  prepare_maestro.py  preprocess.py  pyproject.toml  requirements.txt
notebooks/: baseline_cqt.ipynb
scripts/: build_mert_index.py  check_gpu.py  check_gpus.py  mert_retrieval.py  prepare_maestro.py  preprocess.py  run_eval.py  run_mert_retrieval.py  train_contrastive.py
src/ai_music/: __init__.py  config.py
src/ai_music.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ai_music/eval/: __init__.py  metrics.py  query_generation.py  run_eval.py
src/ai_music/evaluation/: __init__.py  metrics.py  query_generation.py  run_eval.py
src/ai_music/retrieval/: __init__.py  cqt_baseline.py  faiss_index.py  mert.py
src/ai_music/src_data/: __init__.py  dataset.py  prepare_maestro.py  preprocess.py
src/ai_music/training/: __init__.py  losses.py  model.py  train.py
src/ai_music/utils/: __init__.py  audio.py  device.py  paths.py
tests/: __init__.py  test_audio.py  test_config.py  test_eval.py  test_faiss.py  test_metrics.py  test_prepare_maestro.py  test_preprocess.py
